Launchpad automatic translations update.

--- a/po/cs.po
+++ b/po/cs.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2013-03-29 21:18+0000\n"
+"PO-Revision-Date: 2013-04-08 07:02+0000\n"
 "Last-Translator: David Kovář <davidkov@gmx.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-03-30 05:28+0000\n"
-"X-Generator: Launchpad (build 16546)\n"
+"X-Launchpad-Export-Date: 2013-04-09 05:26+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -349,7 +349,7 @@ msgstr "Datum zahájení"
 
 #: GTG/gtk/browser/treeview_factory.py:328
 msgid "Due"
-msgstr "Do"
+msgstr "Termín splnění"
 
 #: GTG/gtk/browser/treeview_factory.py:348
 msgid "Closed date"
@@ -1551,33 +1551,33 @@ msgstr ""
 "jeho štítky, datum zahájení a termín splnění. Dodržujte tato formátovací "
 "pravidla:\n"
 "\n"
-"tags:štítek1,štítek2,štítek3\n"
+"štítky:štítek1,štítek2,štítek3\n"
 "\n"
 "Můžete napsat tolik štítků, kolik si přejete. Štítky se oddělují čárkou. "
 "Všimněte si, že každé slovo, začínající &quot;@&quot;, se také použije jako "
 "štítek.\n"
 "\n"
-"due:datum\n"
-"defer:datum\n"
+"termín:datum\n"
+"zahájit:datum\n"
 "\n"
 "Takto můžete nastavit datum zahájení a termín splnění. Data se mohou uvádět "
 "podle vašich místních zvyklostí nebo rrrr-mm-dd (například 2012-04-01) nebo "
 "rrrrmmdd (20120401) nebo mmdd (0401 - jako rok se použije aktuální rok) nebo "
-"dnes, zítra nebo jako názvy dní v týdnu (due:monday znamená příští pondělí). "
-"Takto vložená data nebudou součástí názvu úkolu.\n"
+"dnes, zítra nebo jako názvy dní v týdnu (termín:pondělí znamená příští "
+"pondělí). Takto vložená data nebudou součástí názvu úkolu.\n"
 "\n"
 "Příklady:\n"
 "\n"
-"koupit vybavení tags:nákup,kancelář due:20130320 defer:tuesday\n"
+"koupit vybavení štítky:nákup,kancelář termín:20130320 zahájit:úterý\n"
 "\n"
 "Tento příklad říká GTG, aby vytvořilo nový úkol s názvem &quot;koupit "
-"vybavení&quot;, se štítky &quot;nákup&quot; a &quot;kancelář&quot;, s datem "
-"ukončení 20.3.3013 a zahájením příští úterý.\n"
+"vybavení&quot;, se štítky &quot;nákup&quot; a &quot;kancelář&quot;, s "
+"termínem splnění 20.3.3013 a zahájením příští úterý.\n"
 "\n"
-"zavolat mámě tags:rodina,telefon due:sunday defer:tomorrow\n"
+"zavolat mámě štítky:rodina,telefon termín:neděle zahájit:zítra\n"
 "\n"
 "Tento příklad říká GTG, aby vytvořilo nový úkol s názvem &quot;zavolat "
-"mámě&quot;, se štítky rodina a telefon, s datem ukončení příští neděli a "
+"mámě&quot;, se štítky rodina a telefon, s termínem splnění příští neděli a "
 "zahájením zítra."
 
 #: GTG/core/firstrun_tasks.py:288
