--- a/po/ca.po
+++ b/po/ca.po
@@ -8,37 +8,37 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2010-05-02 08:43+0000\n"
-"Last-Translator: David Planella <david.planella@ubuntu.com>\n"
+"PO-Revision-Date: 2013-04-20 15:38+0000\n"
+"Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-01-02 04:38+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-04-21 04:38+0000\n"
+"X-Generator: Launchpad (build 16567)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
 msgid "Synchronization Services - %s"
-msgstr ""
+msgstr "Serveis de sincronització – %s"
 
 #: GTG/gtk/backends_dialog/__init__.py:295
 #, python-format
 msgid "Do you really want to remove the '%s' synchronization service?"
-msgstr ""
+msgstr "Esteu segur que voleu suprimir el servei de sincronització «%s»?"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:148
 msgid "Disable syncing"
-msgstr ""
+msgstr "Inhabilita la sincronització"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:150
 msgid "Enable syncing"
-msgstr ""
+msgstr "Habilita la sincronització"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:158
 msgid "This is the default synchronization service"
-msgstr ""
+msgstr "Aquest és el servei de sincronització predeterminat"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:161
 msgid "Syncing is enabled."
@@ -54,7 +54,7 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "All tags"
-msgstr ""
+msgstr "Totes les etiquetes"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "Just these tags:"
